Transferred from the Adobe Open Source Subversion Repository
Revision: 5545
Author:   jimurphy@adobe.com
Date:     2009-03-25T19:00:52.330680Z

Log Message: 
-----------
1st pass of rename according to the spec http://opensource.adobe.com/wiki/display/flexsdk/Dropping+the+Fx+Prefix

Flex now requires CSS Style declarations to declare @namespace rules and disambiguate between halo and spark components using CSS 3 namespace prefixes on type selectors. At compile time, this namespace information will be used to map type names to qualified ActionScript class names. At runtime, type selectors are matched on qualified ActionScript class name (for example mx.controls.Button rather than just Button). Flex 3 applications must be compiled with -compatibility-version=3.0.0 to get unqualified CSS type selector behavior.

QE: Yes, this build may help in updating test cases to use the new namespaces and class names.
Dev: Not yet
Doc: Not yet

Modified Paths:
--------------
748 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275027 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- TextBoxExample.mxml -->
-<Application xmlns="http://ns.adobe.com/mxml/2009">
-     <Panel title="TextBox Example"
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+     <s:Panel title="TextBox Example"
         height="75%" width="75%" layout="horizontal"
         paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
-          <Graphic>
+          <s:Graphic>
                <TextBox x="0" y="0" height="75" width="75">
                     <text>This is a TextBox</text>
                </TextBox>
-          </Graphic>
-          <Group x="100" y="0">
+          </s:Graphic>
+          <s:Group x="100" y="0">
                <TextBox height="100" width="75" paddingTop="5" paddingLeft="5" paddingRight="5" paddingBottom="5">
                     <text>This is a TextBox with a border drawn by a Rect.</text>
                </TextBox>
-               <Rect width="100%" height="100%">
-                    <stroke>
-                         <SolidColorStroke color="red"/>
-                    </stroke>
-               </Rect>               
-          </Group>
-     </Panel>
-</Application>
+               <s:Rect width="100%" height="100%">
+                    <s:stroke>
+                         <s:SolidColorStroke color="red"/>
+                    </s:stroke>
+               </s:Rect>               
+          </s:Group>
+     </s:Panel>
+</s:Application>
