--- a/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- TextBoxExample.mxml -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
-     <s:Panel title="TextBox Example"
-        height="75%" width="75%" layout="horizontal"
-        paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
-          <s:Graphic>
-               <TextBox x="0" y="0" height="75" width="75">
-                    <text>This is a TextBox</text>
-               </TextBox>
-          </s:Graphic>
-          <s:Group x="100" y="0">
-               <TextBox height="100" width="75" paddingTop="5" paddingLeft="5" paddingRight="5" paddingBottom="5">
-                    <text>This is a TextBox with a border drawn by a Rect.</text>
-               </TextBox>
-               <s:Rect width="100%" height="100%">
+
+    <s:Panel title="SimpleText Example"
+            width="75%" height="75%"
+            horizontalCenter="0" verticalCenter="0">
+        <s:Group left="10" right="10" top="10" bottom="10">
+            <s:SimpleText x="0" y="0" height="75" width="75">
+                <s:text>This is a SimpleText control.</s:text>
+            </s:SimpleText>
+
+            <s:Group x="100" y="0">
+                <s:SimpleText height="100" width="75" paddingTop="5" paddingLeft="5" paddingRight="5" paddingBottom="5">
+                    <s:text>This is a SimpleText control with a border drawn by a Rect.</s:text>
+                </s:SimpleText>
+                <s:Rect width="100%" height="100%">
                     <s:stroke>
-                         <s:SolidColorStroke color="red"/>
+                        <s:SolidColorStroke color="red"/>
                     </s:stroke>
-               </s:Rect>               
-          </s:Group>
-     </s:Panel>
+                </s:Rect>
+            </s:Group>
+        </s:Group>
+    </s:Panel>
+
 </s:Application>
