Transferred from the Adobe Open Source Subversion Repository
Revision: 6088
Author:   pdehaan@adobe.com
Date:     2009-04-09T20:43:04.018222Z

Log Message: 
-----------
Renamed source files from TextBoxExample to SimpleTextExample.mxml and TextGraphicExample to RichTextExample.mxml.

Modified Paths:
--------------
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/TextBoxExample.mxml" copyfrom-rev="5924" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/SimpleTextExample.mxml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/TextGraphicExample.mxml" copyfrom-rev="5924" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/RichTextExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275029 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- TextBoxExample.mxml -->
+<!-- SimpleTextExample.mxml -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
 
     <s:Panel title="SimpleText Example"
@@ -12,7 +12,7 @@
 
             <s:Group x="100" y="0">
                 <s:SimpleText height="100" width="75" paddingTop="5" paddingLeft="5" paddingRight="5" paddingBottom="5">
-                    <s:text>This is a SimpleText control with a border drawn by a Rect.</s:text>
+                    <s:text>This is a Spark SimpleText control with a border drawn by a Rect.</s:text>
                 </s:SimpleText>
                 <s:Rect width="100%" height="100%">
                     <s:stroke>
