Transferred from the Adobe Open Source Subversion Repository
Revision: 6032
Author:   pdehaan@adobe.com
Date:     2009-04-08T18:12:07.380247Z

Log Message: 
-----------
Missed an FxList to Spark List change.

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/ListExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275034 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
@@ -16,7 +16,7 @@
         ]]>
     </fx:Script>
 
-    <s:Panel title="FxList Component Example"
+    <s:Panel title="Spark List Component Example"
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:VGroup left="20" right="20" top="20" bottom="20">
