--- a/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
@@ -44,11 +44,11 @@
                 </s:itemRenderer>
                 <s:dataProvider>
                     <s:ArrayList>
-                        <s:Object type="hr" firstName="Ann"  lastName="Green"  />
-                        <s:Object type="employee" firstName="Tom"  lastName="Smith" phone="415-155-1212" />
-                        <s:Object type="employee" firstName="John" lastName="Black" phone="408-344-1234" />
-                        <s:Object type="employee" firstName="Jane" lastName="White" phone="415-235-7878" />
-                        <s:Object type="employee" firstName="Bill" lastName="Jones" phone="415-875-7800" />
+                        <fx:Object type="hr" firstName="Ann"  lastName="Green"  />
+                        <fx:Object type="employee" firstName="Tom"  lastName="Smith" phone="415-155-1212" />
+                        <fx:Object type="employee" firstName="John" lastName="Black" phone="408-344-1234" />
+                        <fx:Object type="employee" firstName="Jane" lastName="White" phone="415-235-7878" />
+                        <fx:Object type="employee" firstName="Bill" lastName="Jones" phone="415-875-7800" />
                     </s:ArrayList>
                 </s:dataProvider>
             </s:List>
