--- a/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
@@ -21,7 +21,7 @@
             horizontalCenter="0" verticalCenter="0">
         <s:VGroup left="20" right="20" top="20" bottom="20">
             <s:SimpleText text="Select a name to see employee's phone number"/>
-            <s:List id="list" selectionChanging="selectionChangingHandler(event);">
+            <s:List id="list" changing="selectionChangingHandler(event);">
                 <!-- itemRenderer is inline in this sample -->
                 <s:itemRenderer>
                     <fx:Component>
