Transferred from the Adobe Open Source Subversion Repository
Revision: 8271
Author:   dsubrama@adobe.com
Date:     2009-06-25T23:25:28.723385Z

Log Message: 
-----------
Change the event type of List-based component's change, changing and caretChange events to a new event class: spark.events.IndexChangeEvent. 

QA: Yes
Doc: Yes
Checkintests: Pass
Mustella: List/DDL/ButtonBar tests pass
Reviewers: Hans & Jason

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/List.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/events/IndexChangeEvent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/ButtonBar.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/supportClasses/ListBase.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/events/IndexChangedEvent.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275037 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
@@ -4,10 +4,10 @@
 
     <fx:Script>
         <![CDATA[
-            import mx.events.IndexChangedEvent;
+            import spark.events.IndexChangeEvent; 
 
             //this function is called when the selection is going to change
-            private function selectionChangingHandler(evt:IndexChangedEvent):void {
+            private function selectionChangingHandler(evt:IndexChangEvent):void {
                 var item:* = list.dataProvider.getItemAt(evt.newIndex);
                 if (item.type != "employee") {
                     evt.preventDefault();
