Transferred from the Adobe Open Source Subversion Repository
Revision: 8811
Author:   tan@adobe.com
Date:     2009-07-25T00:40:55.350630Z

Log Message: 
-----------
Update the ASDoc samples for DropDownListExample and List. They were not compiling because of a typo. I also needed to update the DropDownList sample post renames. (selectionChanged-> change)

SDK-22397

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275038 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml
@@ -4,10 +4,10 @@
 
     <fx:Script>
         <![CDATA[
-            import spark.events.IndexChangeEvent; 
+            import spark.events.IndexChangeEvent;
 
             //this function is called when the selection is going to change
-            private function selectionChangingHandler(evt:IndexChangEvent):void {
+            private function selectionChangingHandler(evt:IndexChangeEvent):void {
                 var item:* = list.dataProvider.getItemAt(evt.newIndex);
                 if (item.type != "employee") {
                     evt.preventDefault();
@@ -20,7 +20,8 @@
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:VGroup left="20" right="20" top="20" bottom="20">
-            <s:SimpleText text="Select a name to see employee's phone number"/>
+            <s:SimpleText width="330"
+                text="Select a name to see employee's phone number. You should not be able to select the first name."/>
             <s:List id="list" changing="selectionChangingHandler(event);">
                 <!-- itemRenderer is inline in this sample -->
                 <s:itemRenderer>
@@ -37,8 +38,8 @@
                                             alpha.selected="0.6" />
                                 </s:fill>
                              </s:Rect>
-                             <s:SimpleText id="nameLabel" text="{data.lastName}, {data.firstName}"/>
-                             <s:SimpleText y="20" id="phoneLabel" text="{data.phone}" includeIn="selected" />
+                             <s:SimpleText id="nameLabel" text="{data.lastName}, {data.firstName}" top="5" left="5" right="5" />
+                             <s:SimpleText y="20" id="phoneLabel" text="{data.phone}" includeIn="selected" top="25" bottom="5" left="5" right="5" />
                         </s:ItemRenderer>
                     </fx:Component>
                 </s:itemRenderer>
