Transferred from the Adobe Open Source Subversion Repository
Revision: 12755
Author:   jacobg@adobe.com
Date:     2009-12-09T21:55:48.294218Z

Log Message: 
-----------
Update example

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/MXDataGridItemRendererExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275042 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/MXDataGridItemRendererExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/MXDataGridItemRendererExample.mxml
@@ -42,7 +42,8 @@
 					<!-- itemEditor that will be used when user clicks in cell -->
 					<mx:itemEditor>
 						<fx:Component>                            
-							<s:MXDataGridItemRenderer focusEnabled="true" height="22">
+							<s:MXDataGridItemRenderer focusEnabled="true" height="22"
+							    implements="mx.managers.IFocusManagerComponent">
 								<!-- TextInput to edit data displayed by Label -->
 								<s:TextInput id="editor" text="{data.firstName}" 
 									top="0" left="0" right="0" bottom="0" />
