--- a/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Simple example to demonstrate the NumericStepper control -->
+<!-- Simple example to demonstrate the Spark NumericStepper control -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/halo">
 
 	<!-- Panel used as a container for NumericStepper control examples -->
@@ -11,11 +11,11 @@
 	<mx:Text width="100%" text="NOTE: valueInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
 	      			        
 		<!-- NumericStepper Control -->
-		<s:NumericStepper id="myFxNS" width="55" value="1.5" stepSize="1.5" 
+		<s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
 		    valueInterval="1.5" valueWrap="true"/>      
         
-		<!-- Label that displays the current value of the FxNumericStepper -->
-		<mx:Label color="purple" text="Current value = {myFxNS.value}"/>
+		<!-- Label that displays the current value of the NumericStepper -->
+		<mx:Label color="purple" text="Current value = {myNS.value}"/>
                                                             
 	</mx:Panel>                             
 </s:Application> 
