Transferred from the Adobe Open Source Subversion Repository
Revision: 5583
Author:   jacobg@adobe.com
Date:     2009-03-26T18:29:14.196856Z

Log Message: 
-----------
Updated one last comment

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/NumericStepperExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275054 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
@@ -14,7 +14,7 @@
 		<s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
 		    valueInterval="1.5" valueWrap="true"/>      
         
-		<!-- Label that displays the current value of the NumericStepper -->
+		<!-- Label that displays the current value of the Spark NumericStepper -->
 		<mx:Label color="purple" text="Current value = {myNS.value}"/>
                                                             
 	</mx:Panel>                             
