--- a/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
@@ -2,20 +2,22 @@
 <!-- Simple example to demonstrate the Spark NumericStepper control -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/halo">
 
-	<!-- Panel used as a container for NumericStepper control examples -->
-	<mx:Panel title="Spark NumericStepper Control Example" height="75%" width="75%" 
-	    paddingTop="10" paddingLeft="10" horizontalCenter="0" verticalCenter="0">
+    <!-- Panel used as a container for Spark NumericStepper control examples -->
+    <s:Panel title="Spark NumericStepper Control Example"
+            width="75%" height="75%"
+            horizontalCenter="0" verticalCenter="0">
+        <s:VGroup left="10" right="10" top="10" bottom="10">
+            <s:SimpleText width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and valueWrap=true"/>
+            <s:SimpleText width="100%" text="Value increments and decrements in multiples of 1.5 and wraps around."/>
+            <s:SimpleText width="100%" text="NOTE: valueInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
 
-	<mx:Text width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and valueWrap=true"/>     
-	<mx:Text width="100%" text="Value increments and decrements in multiples of 1.5 and wraps around."/>
-	<mx:Text width="100%" text="NOTE: valueInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
-	      			        
-		<!-- NumericStepper Control -->
-		<s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
-		    valueInterval="1.5" valueWrap="true"/>      
-        
-		<!-- Label that displays the current value of the Spark NumericStepper -->
-		<mx:Label color="purple" text="Current value = {myNS.value}"/>
-                                                            
-	</mx:Panel>                             
-</s:Application> 
+            <!-- Spark NumericStepper Control -->
+            <s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
+                    valueInterval="1.5" valueWrap="true"/>
+
+            <!-- Label that displays the current value of the Spark NumericStepper -->
+            <s:SimpleText color="purple" text="Current value = {myNS.value}"/>
+        </s:VGroup>
+    </s:Panel>
+
+</s:Application>
