Transferred from the Adobe Open Source Subversion Repository
Revision: 7939
Author:   jszeto@adobe.com
Date:     2009-06-18T00:10:15.473790Z

Log Message: 
-----------
Slider PARB Changes

•  remove dataTipOriginalPosition
•  remove dataTipInstance
•  positionDataTip() -> updateDataTip(dataTipInstance:IDataRenderer, initialPosition:Point)

QE Notes: None
Doc Notes: None
Bugs: None
Reviewer: Evtim

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/VSlider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/HSliderExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/HSlider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/Slider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275056 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
@@ -9,11 +9,11 @@
         <s:VGroup left="10" right="10" top="10" bottom="10">
             <s:SimpleText width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and valueWrap=true"/>
             <s:SimpleText width="100%" text="Value increments and decrements in multiples of 1.5 and wraps around."/>
-            <s:SimpleText width="100%" text="NOTE: valueInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
+            <s:SimpleText width="100%" text="NOTE: snapInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
 
             <!-- Spark NumericStepper Control -->
             <s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
-                    valueInterval="1.5" valueWrap="true"/>
+                    snapInterval="1.5" valueWrap="true"/>
 
             <!-- Label that displays the current value of the Spark NumericStepper -->
             <s:SimpleText color="purple" text="Current value = {myNS.value}"/>
