--- a/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
@@ -1,19 +1,21 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Simple example to demonstrate the Spark NumericStepper control -->
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/halo">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
+               xmlns:s="library://ns.adobe.com/flex/spark" 
+               xmlns:mx="library://ns.adobe.com/flex/halo">
 
     <!-- Panel used as a container for Spark NumericStepper control examples -->
     <s:Panel title="Spark NumericStepper Control Example"
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:VGroup left="10" right="10" top="10" bottom="10">
-            <s:SimpleText width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and valueWrap=true"/>
+            <s:SimpleText width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and allowValueWrap=true"/>
             <s:SimpleText width="100%" text="Value increments and decrements in multiples of 1.5 and wraps around."/>
             <s:SimpleText width="100%" text="NOTE: snapInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
 
             <!-- Spark NumericStepper Control -->
             <s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
-                    snapInterval="1.5" valueWrap="true"/>
+                    snapInterval="1.5" allowValueWrap="true"/>
 
             <!-- Label that displays the current value of the Spark NumericStepper -->
             <s:SimpleText color="purple" text="Current value = {myNS.value}"/>
