--- a/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml
@@ -9,16 +9,16 @@
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:VGroup left="10" right="10" top="10" bottom="10">
-            <s:SimpleText width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and allowValueWrap=true"/>
-            <s:SimpleText width="100%" text="Value increments and decrements in multiples of 1.5 and wraps around."/>
-            <s:SimpleText width="100%" text="NOTE: snapInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
+            <s:Label width="100%" text="Spark NumericStepper control with minimum=0, maximum=10, stepSize=1.5 and allowValueWrap=true"/>
+            <s:Label width="100%" text="Value increments and decrements in multiples of 1.5 and wraps around."/>
+            <s:Label width="100%" text="NOTE: snapInterval must be set to the same value as stepSize or the NumericStepper value will be rounded."/>
 
             <!-- Spark NumericStepper Control -->
             <s:NumericStepper id="myNS" width="55" value="1.5" stepSize="1.5" 
                     snapInterval="1.5" allowValueWrap="true"/>
 
             <!-- Label that displays the current value of the Spark NumericStepper -->
-            <s:SimpleText color="purple" text="Current value = {myNS.value}"/>
+            <s:Label color="purple" text="Current value = {myNS.value}"/>
         </s:VGroup>
     </s:Panel>
 
