--- a/projects/spark/asdoc/en_US/spark/components/examples/PanelExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/PanelExample.mxml
@@ -18,7 +18,7 @@
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:VGroup left="10" right="10" top="10" bottom="10">
-            <s:SimpleText width="100%" color="blue"
+            <s:Label width="100%" color="blue"
                 text="Click the Button control to see panel properties."/>
             <s:TextArea id="panelPropertyArea" width="100%" height="100%"/>
             <s:Button label="Click to view Panel properties" click="showProperties();"/>
