Transferred from the Adobe Open Source Subversion Repository
Revision: 10180
Author:   jacobg@adobe.com
Date:     2009-09-11T23:05:45.458801Z

Log Message: 
-----------
Update PopUpAnchorExample.mxml for recent style changes

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/PopUpAnchorExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275067 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/PopUpAnchorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/PopUpAnchorExample.mxml
@@ -7,8 +7,7 @@
 	<fx:Style>
 		.popUpForm
 		{
-			backgroundColor : #FF0000;
-			borderStyle : "solid";
+			contentBackgroundColor : #FF0000;			
 			paddingTop : 2;
 			paddingBottom : 2; 
 			paddingLeft : 2; 
@@ -28,7 +27,7 @@
 			     popUp will be positioned relative to the button -->
 			<s:PopUpAnchor id="frmPUA" popUpPosition="below" styleName="popUpForm" width="92" height="21">
 				<!-- VBox to hold popUp contents -->
-				<mx:VBox paddingTop="5" paddingLeft="5">				
+				<mx:VBox paddingTop="5" paddingLeft="5" borderStyle="solid">				
 					<mx:Form>
 						<mx:FormItem label="Name :">
 							<s:TextInput/>
