--- a/projects/spark/asdoc/en_US/spark/components/examples/RichTextExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/RichTextExample.mxml
@@ -7,11 +7,16 @@
                     <content>Hello World!</content>
                </TextGraphic>
           </Graphic>
-          <Graphic>
-               <TextGraphic x="100" y="0" width="100" textAlign="justify">
-                       <content>Hello World! This is a justified paragraph of text. It is about 20 words long, which should be enough to cause a few line breaks.</content>
+          <Group x="100" y="0">
+               <TextGraphic width="100" textAlign="justify" paddingTop="5" paddingLeft="5" paddingRight="5" paddingBottom="5">
+                       <content>Hello World! This is a justified paragraph of text in a TextGraphic. It has a border around it drawn by a Rect inside a Group.</content>
                </TextGraphic>
-          </Graphic>
+               <Rect width="100%" height="100%">
+                    <stroke>
+                         <SolidColorStroke color="red"/>
+                    </stroke>
+               </Rect>               
+          </Group>
           <Graphic>
                <TextGraphic x="225" y="0" width="120" height="120" columnCount="2" columnGap="10">
                     <content><span fontWeight="bold">Hello World!</span> This is a paragraph of text in 2 columns. It is about 20 words long, which should be enough to cause a few line breaks.</content>
