Transferred from the Adobe Open Source Subversion Repository
Revision: 6088
Author:   pdehaan@adobe.com
Date:     2009-04-09T20:43:04.018222Z

Log Message: 
-----------
Renamed source files from TextBoxExample to SimpleTextExample.mxml and TextGraphicExample to RichTextExample.mxml.

Modified Paths:
--------------
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/TextBoxExample.mxml" copyfrom-rev="5924" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/SimpleTextExample.mxml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/TextGraphicExample.mxml" copyfrom-rev="5924" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/graphics/examples/RichTextExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275085 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/RichTextExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/RichTextExample.mxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- TextGraphicExample.mxml -->
+<!-- RichTextExample.mxml -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
 
-    <s:Panel title="RichText Example"
+    <s:Panel title="Spark RichText Example"
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:Group left="10" right="10" top="10" bottom="10">
