--- a/projects/spark/asdoc/en_US/spark/components/examples/ScrollerExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ScrollerExample.mxml
@@ -5,7 +5,7 @@
     xmlns:mx="library://ns.adobe.com/flex/mx">
 
     <!-- Panel used as a container for Scroller control examples -->
-    <mx:Panel title="Spinner Control Example" height="75%" width="75%" paddingTop="10"
+    <mx:Panel title="Scroller Control Example" height="75%" width="75%" paddingTop="10"
         paddingLeft="10" horizontalCenter="0" verticalCenter="0">
 
         <s:Scroller width="100" height="100">
